Right sidebar, one sidebar fix spacing

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -269,7 +269,9 @@ body.menu-colors-sidebar-right {
 
 .menu-colors #sidebar-right {
   margin-top: 14px;
-  margin-right: 30px;
+  padding-right: 30px;
+  padding-left: 30px;
+  width: 257px;
 }
 
 .menu-colors.two-sidebars #content-inner,
@@ -282,10 +284,11 @@ body.menu-colors-sidebar-right {
 }
 
 .menu-colors.sidebar-right #content-inner {
-  padding-right: 220px;
+  padding-right: 267px;
 }
 
 .menu-colors.no-sidebars.node-type-fixed-width-secondary-page #content-inner, 
 .menu-colors.no-sidebars.node-type-fluid-width-secondary-page #content-inner {
   padding-left: 0px;
 }
+
